# esp32-s3-lcd

./: CMakeLists.txt  README.md  sdkconfig
components/esp32-s3-lcd-hal/: CMakeLists.txt
components/esp32-s3-lcd-hal/bsp/: bsp.h
components/esp32-s3-lcd-hal/common/hw/include/: audio.h  bt_hidh.h  jpegd.h  lcd.h  lvgl.h  resize.h  touch.h
components/esp32-s3-lcd-hal/common/hw/include/lcd/: ili9481.h  ili9481_regs.h
components/esp32-s3-lcd-hal/hw/: hw.c  hw.h  hw_def.h
components/esp32-s3-lcd-hal/hw/driver/: audio.c  bt_hidh.c  es8156.c  fatfs.c  i2c.c  jpegd.c  lcd.c  lvgl.c  resize.c  sd.c  touch.c
components/esp32-s3-lcd-hal/hw/driver/bt_hid/: esp_hid_gap.c  esp_hid_gap.h
components/esp32-s3-lcd-hal/hw/driver/hangul/: font_han.h  han.c  han.h
components/esp32-s3-lcd-hal/hw/driver/lcd/: ili9481.c
components/esp32-s3-lcd-hal/hw/driver/lvgl/: lv_port_disp.c  lv_port_indev.c  lv_port_indev.h
components/esp32-s3-lcd-hal/hw/driver/touch/: ft6236.c
components/esp32-s3-lcd-hal/lib/: lv_conf.h
components/esp32-s3-lcd-hal/lib/lvgl/src/font/: lv_font.h
components/esp32-s3-lcd-hal/lib/lvgl/src/hal/: lv_hal_indev.c
components/esp32-s3-lcd-hal/lib/lvgl/src/libs/gif/: gifdec.c
components/esp32-s3-lcd-hal/lib/lvgl/src/others/file_explorer/: lv_file_explorer.c
main/: CMakeLists.txt
main/hw/: hw.c  hw.h  hw_def.h
main/hw/driver/: audio.c  button.c  cdc.c  gpio.c  (+8 more)
project/s3-lcd-lvgl/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
project/s3-lcd-lvgl-demo/: CMakeLists.txt  partitions.csv
project/s3-lcd-main/: CMakeLists.txt  sdkconfig
(+30 files in other folders)
